--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="index.html">HOME</a></li>
       <li><a href="links.html">LINKS</a></li>
     </ul>
-       ：　（以下 略）
+    ダウンロードリンク
+      <a href="sample.zip">DOWNLOAD</a>
   </body>
 </html>
