--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <body>
     <h1>HOME</h1>
     <h2>SITE NAVIGATION</h2>
+    <h3>ソーシャルデザイン学科</h3>
     <ul>
       <li><a href="index.html">HOME</a></li>
       <li><a href="links.html">LINKS</a></li>
+      <li><a href="links.html">ソーシャルデザイン学科</a></li>
     </ul>
   </body>
 </html>
