--- a/links.html
+++ b/links.html
@@ -14,7 +14,7 @@
     <h2>関連リンク</h2>
     <ul>
       <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
-      <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
+      <li><a href="http://design.kyusan-u.ac.jp/socialdesign/?SocialDesign">ソーシャルデザイン学科</a></li>
     </ul>
   </body>
 </html>
